--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -1,10 +1,10 @@
 <html>
 <head>
     <title>
-home
+ Home - SEJACRACK
     </title>
     <link rel="stylesheet" type="text/css"  href="Untitled-1.css" />
-    <body style="background-color: rgb(108, 108, 122);">
+    <body style="background-color: rgb(34, 56, 34);">
       <style>
 
         </style>
@@ -31,13 +31,13 @@ home
  <br>
  <div id="Library"></div>
  <a href="Untitled-5.html">
- <img src="Nao compre nesta loja.png" width="1550" id="Library">
+ <img src="Nao compre nesta loja.png" width="80%" id="Library">
  </a>
  <h1 class="texto">Aqui você pode adquirir o uniforme Ceptiba [Cep Coritiba]</h1> <br> <h1 class="texto">O time mais bosta que tem!</h1>
  <a href="Untitled-3.html">
- <img src="Camisa1.png" width="430px" height="550px" class="Camisetas">
- <img src="Camisa2.png" width="430px" height="550px" class="Camisetas">
- <img src="Camisa.png" width="430px" height="550px" class="Camisetas">
+ <img src="Camisa1.png" width="20%" height="57%" class="Camisetas">
+ <img src="Camisa2.png" width="20%" height="57%" class="Camisetas">
+ <img src="Camisa.png" width="20%" height="57%" class="Camisetas">
 </a>
 <a href="Untitled-4.html">
  <img src="outras camisas.png" class="bannerimage2">
