--- a/Untitled-2.html
+++ b/Untitled-2.html
@@ -1,13 +1,16 @@
 <html>
 <head>
     <title>
-Sobre
+Sobre - SEJACRACK
     </title>
     <link rel="stylesheet" type="text/css"  href="Untitled-1.css" />
-    <body style="background-color: rgb(108, 108, 122);">
+    <body style="background-color: rgb(207, 207, 207);">
       <style>
 
         </style>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&display=swap" rel="stylesheet">
  </head>
  <body>
  <nav>
@@ -31,15 +34,21 @@ Sobre
  <br>
  <br>
  <br>
+ <a href="https://www.10pasteisitz.com/"> 
+<img src="Panfleto pastel oferta tons vermelho e amarelo.png" class="anuncio">
+</a>
+<a href="https://www.pilateskinesis.com.br/curso-de-formacao-completa-em-pilates/?gad_source=1&gclid=EAIaIQobChMInOGk3ujohwMVs1xIAB3RNwCIEAAYASAAEgJDlPD_BwE">
+  <img src="pila.png" class="anuncio1">
+</a>
 
- <h1 class="titulo"> ●︎ Sobre Nós:</h1>
+ <h1 class="titulo">Sobre Nós</h1>
  <br>
  <p class="texto2"> - Bem-vindo à nossa loja especializada em roupas de futebol! Aqui você encontra uma ampla variedade de suplementos <br> e camisas dos seus times favoritos.</p>
  <br>
  <br>
 
 
- <h1 class="titulo">●︎ Frete: </H1>
+ <h1 class="titulo"> Frete </H1>
   <br>
  <p class="texto2">- Oferecemos opções de frete para todo o Brasil.</p>
  <p class="texto2">- O custo do frete é calculado durante o processo de compra, dependendo do peso e da localização de entrega.</p>
@@ -47,7 +56,7 @@ Sobre
  <br> 
  <br>
 
- <h1 class="titulo">●︎ Tempo de Entrega: </H1>
+ <h1 class="titulo">Tempo de Entrega </H1>
   <br>
  <p class="texto2">- O prazo de entrega varia conforme a região do destinatário e a modalidade de frete escolhida.</p>
  <p class="texto2">- As entregas são realizadas em parceria com transportadoras confiáveis, visando sempre a segurança e pontualidade.</p>
@@ -58,13 +67,13 @@ Sobre
  <br>
 
  <br>
- <h1 class="titulo">●︎ Política de Devolução: </H1>
+ <h1 class="titulo">Política de Devolução </H1>
   <br>
  <p class="texto2">- Aceitamos devoluções dentro do prazo de 30 dias após o recebimento do produto, desde que esteja nas <br> mesmas condições em que foi enviado.</p>
  <p class="texto2">- Para mais informações sobre devoluções, consulte nossa política detalhada no site.</p>
  <br>
  <br>
 
- <h1 class="titulo">●︎ Horário de Atendimento: </H1>
+ <h1 class="titulo"> Horário de Atendimento </H1>
   <br>
   <p class="texto2">- Nosso horário de atendimento é de segunda a sexta-feira, das 9h às 18h.</p>
