--- a/Untitled-3.html
+++ b/Untitled-3.html
@@ -1,10 +1,10 @@
 <html>
 <head>
     <title>
-Dicas do Campo
+Coleção Ceptiba - SEJACRACK
     </title>
     <link rel="stylesheet" type="text/css"  href="Untitled-1.css" />
-    <body style="background-color: rgb(108, 108, 122);">
+    <body style="background-color: rgb(34, 56, 34);">
       <style>
 
         </style>
