--- a/Untitled-4.html
+++ b/Untitled-4.html
@@ -1,10 +1,10 @@
 <html>
 <head>
     <title>
-Outras Camisas
+Outras Camisas - SEJACRACK
     </title>
     <link rel="stylesheet" type="text/css"  href="Untitled-1.css" />
-    <body style="background-color: rgb(108, 108, 122);">
+    <body style="background-color: rgb(102, 24, 21);">
       <style>
 
         </style>
@@ -46,4 +46,11 @@ Outras Camisas
 <br>
 <br>
 <img src="SPORT.png" width="430px" height="550px" class="Camisetas">
+<a href="https://jbaimoveis.com.br/">
+<img src="Post para Instagram Casa Própria Azul Moderno.png" class="propaganda">
+</a>
+<a href="https://www.injetechcascavel.com.br/?gad_source=1&gclid=EAIaIQobChMI2On4ut3ohwMVwh6tBh2UhCOwEAAYASAAEgIPrPD_BwE">
+  <img src="Panfleto oficina mecânica vermelho preto branco.png" class="propaganda1">
+</a>
+
 
